Fixed alignment at bottom, updated a project desc.

--- a/main.css
+++ b/main.css
@@ -675,9 +675,10 @@ footer {
 }
 
 .contact-list {
-  display: flex;
   width: 68%;
-  margin: 0 auto;
+  margin: 10px auto;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
